# openenv-code-review

./: .dockerignore  .gitignore  BLOG.md  DEMO_GUIDE.md  Dockerfile  IMPROVEMENTS.md  README.md  evaluate_script.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_demo.py  task_generator.py  train.py  train_grpo_colab.ipynb  training_script.py
.github/workflows/: main.yml
api/: main.py  ui.py
artifacts/: demo_report.json  eval_report.json  rl_policy.json  rl_policy_state.json
artifacts/grpo_check/: rl_policy.json  training_progress.jsonl  training_summary.json
artifacts/grpo_final/: training_progress.jsonl  training_summary.json
artifacts/grpo_promptfix/: README.md  training_progress.jsonl  training_summary.json
artifacts/grpo_promptfix/checkpoint-5/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
artifacts/grpo_qwen_chat_smoke/: README.md
artifacts/grpo_qwen_chat_smoke/checkpoint-2/: config.json
artifacts/grpo_qwen_smoke/: README.md
artifacts/grpo_recheck/: README.md  training_progress.jsonl  training_summary.json
artifacts/grpo_run/: README.md  training_progress.jsonl  training_summary.json
artifacts/grpo_smoke/: README.md  eval_report.json  training_progress.jsonl  training_summary.json
artifacts/rl_run/: rl_policy.json  training_progress.jsonl  training_summary.json
backend/api/: main.py  ui.py
backend/server/: app.py
baseline/: run.py
env/: environment.py  grader.py  model_utils.py  models.py  policy.py  reward.py  reward_integration.py  tasks.py
frontend/: index.html
server/: app.py
(+14 files in other folders)
