[project]
name = "openenv-code-review"
version = "0.1.0"
description = "OpenEnv Code Review Environment"
authors = [
  { name = "Jay Dhanwalkar" }
]

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"
requires = ["openenv>=0.2.0"]