[project]
name = "openenv-code-review"
version = "0.1.0"
description = "OpenEnv Code Review Environment"
authors = [
  { name = "Jay Dhanwalkar" }
]

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "python-dotenv",
  "openenv>=0.1.13"
]

[project.scripts]
server = "backend.server.app:main"

[tool.openenv]
entrypoint = "backend.server.app:main"
requires = ["openenv>=0.1.13"]
